# better-chess-engine

./: CMakeLists.txt
data/: opening_book.txt
include/engine/: attacks.hpp  bitboard.hpp  board.hpp  book.hpp  move.hpp  movegen.hpp  polyglot.hpp  polyglot_keys.hpp  repetition.hpp  search.hpp  see.hpp  types.hpp  zobrist.hpp
scripts/: aggregate_match_logs.sh  benchmark_depth.sh  benchmark_depth_suite.sh  benchmark_nodes.sh  benchmark_timed.sh  elo_baselines.sh  elo_from_logs.sh  equal_openings.txt  fetch_equal_openings.py  fetch_opening_book.sh  run_baseline_match.sh  run_elo_ladder.sh  run_gui.sh  run_matches.sh  run_matches_parallel.sh
src/: attacks.cpp  board.cpp  book.cpp  gui_server.cpp  magics.inc  movegen.cpp  perft_main.cpp  polyglot.cpp  repetition.cpp  search.cpp  search_main.cpp  see.cpp  selfplay_main.cpp  zobrist.cpp
src/search/: search_common.cpp  search_common.hpp  search_dispatch.cpp  search_eval_bishop.cpp  search_eval_bishop.hpp  search_eval_hanging.cpp  search_eval_hanging.hpp  search_eval_knight.cpp  search_eval_knight.hpp  search_eval_layered.cpp  search_eval_layered.hpp  search_eval_mopup.cpp  search_eval_mopup.hpp  search_eval_pawn_extended.cpp  search_eval_pawn_extended.hpp  search_eval_phase.cpp  search_eval_phase.hpp  search_eval_rook.cpp  search_eval_rook.hpp  search_eval_space.cpp  search_eval_space.hpp  search_eval_v13.cpp  search_eval_v15.cpp  search_eval_v21.cpp  search_eval_v22.cpp  search_eval_v23.cpp  search_eval_v24.cpp  search_eval_v6.cpp  search_eval_v7.cpp  search_eval_v8.cpp  search_eval_v9.cpp  search_internal.hpp  search_lazy_smp.cpp  search_ordering.cpp  search_tt.cpp  search_tt.hpp  search_v10_tt.cpp  search_v11_tt.cpp  search_v12_tt.cpp  search_v14_tt.cpp  (+17 more)
tests/: book_tests.cpp  delta_qsearch_tests.cpp  eval_v13_tests.cpp  eval_v15_tests.cpp  eval_v21_tests.cpp  eval_v22_tests.cpp  eval_v23_tests.cpp  eval_v24_tests.cpp  eval_v6_tests.cpp  eval_v7_tests.cpp  eval_v8_tests.cpp  eval_v9_tests.cpp  futility_tests.cpp  killer_history_tests.cpp  null_move_tests.cpp  perft_tests.cpp  persistent_tt_tests.cpp  repetition_tests.cpp  see_qsearch_tests.cpp  see_tests.cpp  tactical_fen_tests.cpp  tt_tests.cpp
web/: app.js  index.html  stockfish-eval.js  style.css
